--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         app:layout_constraintBottom_toTopOf="@+id/tvOperation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:autofillHints="numbers"
         tools:ignore="LabelFor,SpeakableTextPresentCheck" />
 
     <TextView
